[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pause_screen.gd" type="Script" id=1]
[ext_resource path="res://styles/screen_back.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://styles/button.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/content.tres" type="DynamicFont" id=5]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 371.0
margin_top = 145.0
margin_right = 589.0
margin_bottom = 395.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 217.0
margin_bottom = 249.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 216.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Paused"

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 216.0
margin_bottom = 80.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Resume"

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 216.0
margin_bottom = 136.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Restart level"

[node name="OptionsButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 216.0
margin_bottom = 192.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Options"

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 216.0
margin_bottom = 248.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Main menu"
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ResumeButton" to="." method="_resume_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/RestartButton" to="." method="_restart_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/OptionsButton" to="." method="_options_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/MainMenuButton" to="." method="_main_menu_pressed"]
